--- a/package.json
+++ b/package.json
@@ -12,17 +12,33 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "flickity": "^3.0.0",
+    "hero-slider": "^3.2.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-animated-slider": "^2.0.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^2.10.2",
+    "react-content-zoom": "^1.0.3",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.7",
+    "react-grid-gallery": "^1.0.1",
+    "react-id-swiper": "^4.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-photo-album": "^2.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "4.3.2",
+    "stylis": "^3.5.4",
     "swiper": "^11.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
