--- a/package.json
+++ b/package.json
@@ -5,54 +5,51 @@
   "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fortawesome/fontawesome-free": "^5.1.0-9",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@mui/styles": "^6.1.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/system": "^5.15.12",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@trendyol-js/react-carousel": "^3.0.2",
-    "@vis.gl/react-google-maps": "^1.1.0",
-    "antd": "^5.18.1",
+    "@vis.gl/react-google-maps": "^3.4.1",
+    "antd": "^5.15.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "cross-fetch": "^4.0.0",
     "google-map-react": "^2.2.1",
-    "google-maps-react": "^2.0.6",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
-    "react-grid-gallery": "^1.0.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.1.0",
     "react-helmet": "^6.1.0",
-    "react-image-lightbox": "^5.1.4",
+    "react-image-gallery": "^1.3.0",
     "react-owl-carousel": "^2.3.3",
-    "react-owl-carousel2": "^0.3.0",
     "react-photo-album": "^2.3.1",
-    "react-player": "^2.16.0",
-    "react-redux": "^9.1.2",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.23.0",
+    "react-player": "^2.15.1",
+    "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-search-autocomplete": "^8.5.2",
     "react-slick": "^0.30.2",
-    "react-spinners": "^0.14.1",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "4.3.2",
-    "stylis": "^3.5.4",
-    "swiper": "^11.1.3",
-    "web-vitals": "^2.1.4",
-    "yet-another-react-lightbox": "^3.18.0"
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
+    "web-vitals": "^3.5.2",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node scripts/generateCriticalCss.mjs",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -75,7 +72,6 @@
     ]
   },
   "devDependencies": {
-    "critical": "^7.2.1",
-    "preload-webpack-plugin": "^2.3.0"
+    "critical": "^7.2.1"
   }
 }
