--- a/package.json
+++ b/package.json
@@ -5,47 +5,55 @@
   "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@mui/icons-material": "^5.15.12",
-    "@mui/material": "^5.15.12",
-    "@mui/system": "^5.15.12",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-free": "^5.1.0-9",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styles": "^5.15.15",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.2",
-    "@vis.gl/react-google-maps": "^3.4.1",
-    "antd": "^5.15.2",
+    "@vis.gl/react-google-maps": "^1.1.0",
+    "antd": "^5.18.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "cross-fetch": "^4.0.0",
+    "framer-motion": "^11.2.5",
     "google-map-react": "^2.2.1",
-    "jquery": "^3.7.1",
+    "google-maps-react": "^2.0.6",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "owl.carousel": "^2.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
+    "react-content-zoom": "^1.0.3",
     "react-dom": "^18.2.0",
-    "react-grid-gallery": "^1.1.0",
+    "react-grid-gallery": "^1.0.1",
     "react-helmet": "^6.1.0",
-    "react-image-gallery": "^1.3.0",
-    "react-owl-carousel": "^2.3.3",
+    "react-id-swiper": "^4.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-owl-carousel2": "^0.3.0",
     "react-photo-album": "^2.3.1",
-    "react-player": "^2.15.1",
-    "react-redux": "^9.1.0",
-    "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.22.3",
+    "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-search-autocomplete": "^8.5.2",
     "react-slick": "^0.30.2",
-    "react-spinners": "^0.13.8",
+    "react-spinners": "^0.14.1",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.8",
-    "swiper": "^11.0.7",
-    "web-vitals": "^3.5.2",
-    "yet-another-react-lightbox": "^3.17.0"
+    "styled-components": "4.3.2",
+    "stylis": "^3.5.4",
+    "swiper": "^11.1.3",
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,6 +80,9 @@
     ]
   },
   "devDependencies": {
-    "critical": "^7.2.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "clean-webpack-plugin": "^4.0.0",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
