--- a/package.json
+++ b/package.json
@@ -19,20 +19,15 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "cross-fetch": "^4.0.0",
-    "framer-motion": "^11.2.5",
-    "google-map-react": "^2.2.1",
-    "google-maps-react": "^2.0.6",
-    "leaflet": "^1.9.4",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "owl.carousel": "^2.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
-    "react-content-zoom": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.1",
     "react-helmet": "^6.1.0",
-    "react-id-swiper": "^4.0.0",
     "react-image-lightbox": "^5.1.4",
     "react-owl-carousel2": "^0.3.0",
     "react-photo-album": "^2.3.1",
@@ -45,7 +40,6 @@
     "react-search-autocomplete": "^8.5.2",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
-    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
@@ -81,8 +75,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "v": "^0.3.0",
+    "worker-loader": "^3.0.8"
   }
 }
